--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "start-app",
+  "name": "Affiliate App",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -46,5 +46,5 @@
     "vite": "~5.2.0",
     "vitest": "^0.34.6"
   },
-  "description": "An Ionic project"
+  "description": "An Affiliate management app for many e-commerce platforms like Amazon, Flipkart etc."
 }
